Minor fixes in docs/ + package name

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "lezer-grammar",
   "scripts": {
     "build": "lezer-generator --output src/parser src/lezer.grammar",
     "build:doc": "rollup -c",
