Include breaking change in Lezer v0.12

--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
     "build": "lezer-generator --output src/parser src/lezer.grammar",
     "build:doc": "rollup -c",
     "start": "node -r esm dingus.js",
-    "dev": "nodemon --exec 'yarn build' -e lezer",
+    "dev": "nodemon --exec 'yarn build' -e grammar",
     "dev:doc": "rollup -cw"
   },
   "license": "Unlicense",
   "dependencies": {
     "esm": "^3.2.25",
-    "lezer": "^0.11.2"
+    "lezer": "^0.12.0"
   },
   "devDependencies": {
-    "@codemirror/next": "^0.13.1",
+    "@codemirror/next": "^0.14.0",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "lezer-generator": "^0.11.2",
+    "lezer-generator": "^0.12.0",
+    "node-static": "^0.7.11",
     "nodemon": "^2.0.5",
     "rollup": "^2.30.0",
     "rollup-plugin-livereload": "^2.0.0",
