Update links after transfer to polystat org

--- a/elm-application.json
+++ b/elm-application.json
@@ -1,5 +1,5 @@
 {
-    "name": "fizruk/try-phi",
+    "name": "polystat/try-phi",
     "summary": "Try 𝜑-calculus online",
     "version": "0.1.0",
     "exposed-modules": [
