--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,16 +24,21 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      
-      - uses: jorelali/setup-elm@v3
+      - uses: cachix/install-nix-action@v13
         with:
-          elm-version: 0.19.1
-          
-      - run: elm make src/Main.elm --output src/Main.js
+          nix_path: nixpkgs=channel:nixos-unstable
+      - uses: cachix/cachix-action@v10
+        with:
+          name: mycache
+          # If you chose signing key for write access
+          signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
+          # If you chose API tokens for write access OR if you have a private cache
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+      - run: nix-build
       
       - run: |
           mkdir dist
-          mv src/* dist
+          mv ./result/bin/ dist
 
       - name: 📘 Publish Documentation
         uses: peaceiris/actions-gh-pages@v3
