--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
       
       - run: |
           mkdir dist
-          mv ./result/bin/ dist
+          cp -r ./result/bin dist
 
       - name: 📘 Publish Documentation
         uses: peaceiris/actions-gh-pages@v3
