Add custom index.html and styles.css

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,8 @@ jobs:
       - run: |
           mkdir dist
           cp -r ./result/bin dist
+          cp index.html dist/.
+          cp styles.css dist/.
 
       - name: 📘 Publish Documentation
         uses: peaceiris/actions-gh-pages@v3
