--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,8 @@ jobs:
       - run: |
           mkdir dist
           cp -r ./result/bin dist
-          cp index.html dist/.
-          cp styles.css dist/.
+          cp index.html dist/bin/app.jsexe/.
+          cp styles.css dist/bin/app.jsexe/.
 
       - name: 📘 Publish Documentation
         uses: peaceiris/actions-gh-pages@v3
