Fix deployment to GitHub Pages

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - run: nix-build
       
       - run: |
-          cp -r ./result/bin/app.jsexe/ dist/
+          cp -r ./result/bin/try-phi.jsexe/ dist/
           chmod -R +w dist/
           cp index.html dist/.
           cp styles.css dist/.
