fix add reload button

--- a/stack.yaml
+++ b/stack.yaml
@@ -69,3 +69,7 @@ extra-deps:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
+
+flags:
+  miso:
+    jsaddle: true
