--- a/package.json
+++ b/package.json
@@ -13,12 +13,21 @@
     "lezer": "^0.13.1"
   },
   "devDependencies": {
-    "@codemirror/next": "^0.15.0",
-    "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "lezer-generator": "^0.13.1",
+    "@codemirror/language": "^0.19.7",
+    "@codemirror/highlight": "^0.19.7",
+    "@codemirror/view": "^0.19.37",
+    "@codemirror/basic-setup": "^0.19.1",
+    "@codemirror/commands": "^0.19.6",
+    
+    "@lezer/generator": "^0.15.2",
+    
     "node-static": "^0.7.11",
     "nodemon": "^2.0.5",
+
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-typescript": "^8.3.0",
+
     "rollup": "^2.30.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-string": "^3.0.0"
