--- a/eo-parser.cabal
+++ b/eo-parser.cabal
@@ -25,13 +25,18 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      ParseEO
   other-modules:
       Paths_eo_parser
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      acme-missiles
+    , base >=4.7 && <5
+    , containers
+    , filepath
+    , megaparsec
+    , text
   default-language: Haskell2010
 
 executable eo-parser-exe
@@ -42,8 +47,13 @@ executable eo-parser-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      acme-missiles
+    , base >=4.7 && <5
+    , containers
     , eo-parser
+    , filepath
+    , megaparsec
+    , text
   default-language: Haskell2010
 
 test-suite eo-parser-test
@@ -55,6 +65,11 @@ test-suite eo-parser-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      acme-missiles
+    , base >=4.7 && <5
+    , containers
     , eo-parser
+    , filepath
+    , megaparsec
+    , text
   default-language: Haskell2010
