--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lezer-grammar",
   "scripts": {
-    "build": "lezer-generator --output src/parser src/lezer.grammar",
-    "build:doc": "npm run build; rollup -c",
+    "build:parser": "lezer-generator --output src/parser src/lezer.grammar",
+    "build": "npm run build:parser; rollup -c",
     "start": "node -r esm dingus.js",
     "dev": "nodemon --exec 'yarn build' -e grammar",
     "dev:doc": "rollup -cw"
@@ -20,11 +20,11 @@
     "@codemirror/view": "^0.19.37",
     "@codemirror/lint": "^0.19.3",
     "@lezer/generator": "^0.15.2",
-    "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
-    "rollup": "^2.30.0",
-    "rollup-plugin-livereload": "^2.0.0",
+    "rollup": "^2.63.0",
+    "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-string": "^3.0.0"
   }
 }
