--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@codemirror/highlight": "^0.19.7",
     "@codemirror/language": "^0.19.7",
     "@codemirror/lint": "^0.19.3",
+    "@codemirror/rangeset": "^0.19.6",
     "@codemirror/view": "^0.19.37",
     "@lezer/generator": "^0.15.2",
     "@rollup/plugin-commonjs": "^21.0.1",
