--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "Unlicense",
   "dependencies": {
     "@lezer/lr": "^0.15.5",
+    "copy-to-clipboard": "^3.3.1",
     "esm": "^3.2.25"
   },
   "devDependencies": {
