add generate local docs, add deps for .js import

--- a/package.yaml
+++ b/package.yaml
@@ -51,6 +51,9 @@ dependencies:
 - transformers
 - trifecta
 - unordered-containers
+- bytestring
+- warp
+- websockets
 
 library:
   source-dirs: src
