--- a/package.yaml
+++ b/package.yaml
@@ -51,9 +51,6 @@ dependencies:
 - transformers
 - trifecta
 - unordered-containers
-- bytestring
-- warp
-- websockets
 
 library:
   source-dirs: src
@@ -66,8 +63,8 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    js-sources:
-        bundle.js
+    # js-sources:
+    #     bundle.js
     when:
       - condition: impl(ghcjs)
         then:
