--- a/package.yaml
+++ b/package.yaml
@@ -8,7 +8,7 @@ copyright:           "2021 Nikolai Kudasov"
 
 extra-source-files:
 - README.md
-- ChangeLog.md
+# - ChangeLog.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -63,8 +63,6 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    # js-sources:
-    #     bundle.js
     when:
       - condition: impl(ghcjs)
         then:
