--- a/eo-parser.cabal
+++ b/eo-parser.cabal
@@ -1,4 +1,4 @@
-cabal-version: 1.12
+cabal-version: 1.24
 
 -- This file has been generated from package.yaml by hpack version 0.34.4.
 --
@@ -6,22 +6,28 @@ cabal-version: 1.12
 
 name:           eo-parser
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/eo-parser#readme>
-homepage:       https://github.com/githubuser/eo-parser#readme
-bug-reports:    https://github.com/githubuser/eo-parser/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2022 Author name here
+description:    Please see the README on GitHub at <https://github.com/br4ch1st0chr0n3/eo-parser#readme>
+homepage:       https://github.com/br4ch1st0chr0n3/eo-parser#readme
+bug-reports:    https://github.com/br4ch1st0chr0n3/eo-parser/issues
+author:         Danila Danko
+maintainer:     br4ch1st0chr0n3@gmail.com
+copyright:      2022 Danila Danko
 license:        BSD3
 license-file:   LICENSE
-build-type:     Simple
+build-type:     Custom
 extra-source-files:
     README.md
     ChangeLog.md
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/eo-parser
+  location: https://github.com/br4ch1st0chr0n3/eo-parser
+
+custom-setup
+  setup-depends:
+      Cabal
+    , base
+    , cabal-doctest >=1.0.2 && <1.1
 
 library
   exposed-modules:
@@ -30,46 +36,125 @@ library
       Paths_eo_parser
   hs-source-dirs:
       src
+  ghc-options: -Wall -fno-warn-type-defaults -O2
   build-depends:
-      acme-missiles
+      ansi-terminal
     , base >=4.7 && <5
+    , bifunctors
+    , bound
     , containers
-    , filepath
+    , deepseq
+    , free
+    , hashable
+    , insert-ordered-containers
+    , kan-extensions
+    , logict
     , megaparsec
+    , mtl
+    , parsers
+    , prettyprinter
+    , profunctors
     , text
+    , transformers
+    , unordered-containers
   default-language: Haskell2010
 
-executable eo-parser-exe
+executable eo-parser
   main-is: Main.hs
   other-modules:
       Paths_eo_parser
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -fno-warn-type-defaults -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      acme-missiles
+      ansi-terminal
     , base >=4.7 && <5
+    , bifunctors
+    , bound
     , containers
-    , eo-parser
-    , filepath
+    , deepseq
+    , free
+    , hashable
+    , insert-ordered-containers
+    , kan-extensions
+    , logict
     , megaparsec
+    , mtl
+    , parsers
+    , prettyprinter
+    , profunctors
     , text
+    , transformers
+    , unordered-containers
+  if impl(ghcjs)
+    build-depends:
+        eo-parser
+  else
+    build-depends:
+        eo-parser
   default-language: Haskell2010
 
-test-suite eo-parser-test
+test-suite doctests
+  type: exitcode-stdio-1.0
+  main-is: doctests.hs
+  hs-source-dirs:
+      test
+  ghc-options: -Wall -fno-warn-type-defaults -O2
+  build-depends:
+      Glob
+    , QuickCheck
+    , ansi-terminal
+    , base
+    , bifunctors
+    , bound
+    , containers
+    , deepseq
+    , doctest
+    , free
+    , hashable
+    , insert-ordered-containers
+    , kan-extensions
+    , logict
+    , megaparsec
+    , mtl
+    , parsers
+    , prettyprinter
+    , profunctors
+    , template-haskell
+    , text
+    , transformers
+    , unordered-containers
+  default-language: Haskell2010
+
+test-suite spec
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
       Paths_eo_parser
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -fno-warn-type-defaults -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      acme-missiles
+      QuickCheck
+    , ansi-terminal
     , base >=4.7 && <5
+    , bifunctors
+    , bound
     , containers
+    , deepseq
     , eo-parser
-    , filepath
+    , free
+    , hashable
+    , hspec
+    , insert-ordered-containers
+    , kan-extensions
+    , logict
     , megaparsec
+    , mtl
+    , parsers
+    , prettyprinter
+    , profunctors
     , text
+    , transformers
+    , unordered-containers
   default-language: Haskell2010
