--- a/stack.yaml
+++ b/stack.yaml
@@ -18,7 +18,7 @@
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
 resolver:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/18/21.yaml
+  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/18/22.yaml
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -36,12 +36,18 @@ packages:
 # forks / in-progress versions pinned to a git hash. For example:
 #
 extra-deps:
-- acme-missiles-0.3
-- megaparsec-9.0.1@sha256:2244ab77521a52a0083966c5405b3151f149e1db50b1a5b104cd9b1e56617203,3248
+# - fgl-5.7.0.3@sha256:a5970bb2d6835e2479380ca822ac43436ffef050770391f21802ed4610e1d5b8,3648
+- mtl-2.2.2
+- ref-tf-0.5.0.1
+- megaparsec-9.2.0
+
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
 # extra-deps: []
+
+ghc-options:
+  '$everything': -haddock
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
