--- a/eo-parser.cabal
+++ b/eo-parser.cabal
@@ -32,6 +32,7 @@ custom-setup
 library
   exposed-modules:
       ParseEO
+      SimplifyTree
   other-modules:
       Paths_eo_parser
   hs-source-dirs:
