--- a/eo-parser.cabal
+++ b/eo-parser.cabal
@@ -32,6 +32,7 @@ custom-setup
 library
   exposed-modules:
       ParseEO
+      ParseEOAlt
       ParseIndents
       SimplifyTree
   other-modules:
