add annotations for data values

--- a/eo-parser.cabal
+++ b/eo-parser.cabal
@@ -33,6 +33,7 @@ library
   exposed-modules:
       EnumerateNodes
       ParseEO
+      PrettyPrintTerm
       PrettyPrintTree
       ToTerm
   other-modules:
