--- a/stack.yaml
+++ b/stack.yaml
@@ -41,6 +41,7 @@ extra-deps:
 - ref-tf-0.5.0.1
 - megaparsec-9.2.0
 - scientific-0.3.7.0
+- pretty-simple-4.1.0.0
 
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
