--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,17 +25,17 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - uses: cachix/install-nix-action@v13
+      - uses: cachix/install-nix-action@v15
         with:
           nix_path: nixpkgs=channel:nixos-unstable
       - uses: cachix/cachix-action@v10
         with:
           name: miso-haskell
 
-#       - name: Cache install Nix packages
-#         uses: rikhuijzer/cache-install@v1.0.8
-#         with:
-#           key: nix-${{ hashFiles('default.nix') }}
+      - name: Cache install Nix packages
+        uses: rikhuijzer/cache-install@v1
+        with:
+          key: nix-${{ hashFiles('default.nix') }}
 
       - run: nix-build
 
