--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "editor"]
-	path = editor
+[submodule "phi-minimal-editor"]
+	path = phi-minimal-editor
 	url = https://github.com/br4ch1st0chr0n3/phi-minimal-editor
