--- a/stack.yaml
+++ b/stack.yaml
@@ -42,6 +42,7 @@ extra-deps:
 - jsaddle-0.9.8.2
 - jsaddle-warp-0.9.8.2
 - servant-lucid-0.9.0.5
+- eo-parser
 
 ghc-options:
   '$everything': -haddock
