--- a/hie.yaml
+++ b/hie.yaml
@@ -1,2 +1,31 @@
 cradle:
   stack:
+    - path: "eo-parser/src"
+      component: "eo-parser:lib"
+
+    - path: "eo-parser/app/Main.hs"
+      component: "eo-parser:exe:eo-parser"
+
+    - path: "eo-parser/app/Paths_eo_parser.hs"
+      component: "eo-parser:exe:eo-parser"
+
+    - path: "eo-parser/test"
+      component: "eo-parser:test:doctests"
+
+    - path: "eo-parser/test"
+      component: "eo-parser:test:spec"
+    
+    - path: "./src"
+      component: "try-phi:lib"
+
+    - path: "./app/Main.hs"
+      component: "try-phi:exe:try-phi"
+
+    - path: "./app/Paths_try_phi.hs"
+      component: "try-phi:exe:try-phi"
+
+    - path: "./test"
+      component: "try-phi:test:doctests"
+
+    - path: "./test"
+      component: "try-phi:test:spec"
