--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
-  "name": "lezer-grammar",
+  "name": "phi-grammar",
   "scripts": {
-    "build": "lezer-generator --output src/parser src/lezer.grammar",
-    "build:doc": "npm run build; rollup -c",
+    "build:parser": "lezer-generator --output src/grammar/parser src/grammar/phi.grammar",
+    "build": "npm run build:parser; rollup -c",
     "start": "node -r esm dingus.js",
     "dev": "nodemon --exec 'yarn build' -e grammar",
     "dev:doc": "rollup -cw"
   },
   "license": "Unlicense",
   "dependencies": {
-    "esm": "^3.2.25",
-    "lezer": "^0.13.1"
+    "@lezer/lr": "^0.15.5",
+    "copy-to-clipboard": "^3.3.1",
+    "esm": "^3.2.25"
   },
   "devDependencies": {
-    "@codemirror/next": "^0.15.0",
-    "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "lezer-generator": "^0.13.1",
-    "node-static": "^0.7.11",
-    "nodemon": "^2.0.5",
-    "rollup": "^2.30.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-string": "^3.0.0"
+    "@codemirror/basic-setup": "^0.19.1",
+    "@codemirror/commands": "^0.19.6",
+    "@codemirror/highlight": "^0.19.7",
+    "@codemirror/language": "^0.19.7",
+    "@codemirror/lint": "^0.19.3",
+    "@codemirror/rangeset": "^0.19.6",
+    "@codemirror/view": "^0.19.37",
+    "@lezer/generator": "^0.15.2",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "rollup": "^2.63.0",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-string": "^3.0.0",
+    "nodemon": "^2.0.16",
+    "@vanilla-extract/css": "^1.7.0"
   }
 }
