--- a/stack.yaml
+++ b/stack.yaml
@@ -18,7 +18,8 @@
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
 resolver:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/18/28.yaml
+  # url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/18/28.yaml
+  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/14/27.yaml
 
 
 # User packages to be built.  
@@ -43,9 +44,16 @@ extra-deps:
 - jsaddle-0.9.8.2
 - jsaddle-warp-0.9.8.2
 - servant-lucid-0.9.0.5
+- servant-0.19
+- ref-tf-0.4.0.2
+- trifecta-2.1
 
 ghc-options:
   '$everything': -haddock
+
+flags:
+  miso:
+    jsaddle: true
 
 #
 # extra-deps: []
