--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "lezer-grammar",
+  "name": "eo-grammar",
+  "type": "module",
   "scripts": {
     "build:parser": "lezer-generator --output src/grammar/parser src/grammar/eod.grammar",
-    "build": "npm run build:parser; rollup -c",
-    "start": "node -r esm dingus.js",
-    "dev": "nodemon --exec 'yarn build' -e grammar",
-    "dev:doc": "rollup -cw"
+    "dev:parser": "nodemon --watch src/grammar/*.grammar --exec \"npm run build:parser\"",
+    "dev:build": "node esbuild.config.js",
+    "dev:browser": "parcel docs/index.html --open",
+    "dev": "run-p --aggregate-output dev:build dev:browser dev:parser"
   },
   "license": "Unlicense",
   "dependencies": {
     "@lezer/lr": "^0.15.5",
     "copy-to-clipboard": "^3.3.1",
-    "esm": "^3.2.25"
+    "esbuild": "^0.14.39",
+    "esbuild-node-externals": "^1.4.1",
+    "esm": "^3.2.25",
+    "parcel": "^2.5.0"
   },
   "devDependencies": {
     "@codemirror/basic-setup": "^0.19.1",
@@ -22,11 +26,8 @@
     "@codemirror/rangeset": "^0.19.6",
     "@codemirror/view": "^0.19.37",
     "@lezer/generator": "^0.15.2",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "^8.3.0",
-    "rollup": "^2.63.0",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-string": "^3.0.0"
+    "nodemon": "^2.0.16",
+    "npm-run-all": "^4.1.5",
+    "process": "^0.11.10"
   }
 }
