--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
     "@lezer/generator": "^0.15.2",
     "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
-    "npm-watch": "^0.11.0",
-    "process": "^0.11.10",
-    "watch": "^1.0.2"
+    "process": "^0.11.10"
   }
 }
