--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Node toolchain
         uses: actions/setup-node@v1
         with:
-          node-version: "12.x"
+          node-version: "16.x"
 
       - name: Cache PureScript dependencies
         uses: actions/cache@v2
@@ -41,7 +41,12 @@ jobs:
         run: npm install
 
       - name: Build the project
-        run: npm run build
+        run: |
+          npm run build-prod;
+          mkdir -p docs;
+          echo 'require("./min.js").main();' > docs/index.js;
+          esbuild --minify prod/index.js --outfile=docs/min.js;
+          cp dev/index.html docs;
 
-      - name: Run the tests
-        run: npm run test
+      # - name: Run the tests
+        # run: npm run test
