--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "test": "spago test",
     "serve": "parcel dev/index.html --open",
     "build-prod": "mkdir -p prod && cp dev/index.html prod/ && rm -rf dist && spago bundle-app --to prod/index.js && parcel build prod/index.html"
+  },
+  "dependencies": {
+    "esbuild": "^0.14.43"
   }
 }
