--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
           npm run build-prod;
           npx esbuild --minify prod/index.js --outfile=docs/min.js;
           cp dev/index.html docs;
-          echo "import main from './min.js'\nmain()" > docs/index.js
+          echo "import { main } from './min.js'\nmain()" > docs/index.js
       
       - name: GitHub Pages action
         uses: peaceiris/actions-gh-pages@v3.7.3
