--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,8 @@ jobs:
       - name: Build the project
         run: |
           npm run build-prod;
-          npx esbuild --minify prod/index.js --outfile=docs/min.js;
-          cp dev/index.html docs;
-          printf "import { main } from './min.js'\nmain()" > docs/index.js
+          cp dev/* docs;
+          npx esbuild --minify prod/index.js --outfile=docs/index.js;
       
       - name: GitHub Pages action
         uses: peaceiris/actions-gh-pages@v3.7.3
