--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,9 +42,10 @@ jobs:
 
       - name: Build the project
         run: |
-          npm run build-prod;
-          cp dev/* docs;
-          npx esbuild --minify prod/index.js --outfile=docs/index.js;
+          npm run build-prod
+          mkdir -p docs
+          cp dev/* docs
+          npx esbuild --minify prod/index.js --outfile=docs/index.js
       
       - name: GitHub Pages action
         uses: peaceiris/actions-gh-pages@v3.7.3
