use another random string generator

--- a/stack.yaml
+++ b/stack.yaml
@@ -20,6 +20,10 @@
 resolver:
   # url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/nightly/2022/6/22.yaml
   url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/18/28.yaml
+  # url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/19/13.yaml
+  # url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/19/5.yaml
+
+
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
