--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = editor
 	url = https://github.com/br4ch1st0chr0n3/phi-minimal-editor
 [submodule "eo-parser"]
-	path = eo-parser
+	path = eo-utils
 	url = https://github.com/br4ch1st0chr0n3/eo-parser
