--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "eo-parser"]
 	path = eo-utils
 	url = https://github.com/br4ch1st0chr0n3/eo-parser
+[submodule "phi-utils"]
+	path = phi-utils
+	url = https://github.com/br4ch1st0chr0n3/phi-utils
