--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "phi-minimal-editor"]
 	path = editor
 	url = https://github.com/br4ch1st0chr0n3/phi-minimal-editor
-[submodule "eo-parser"]
-	path = eo-utils
-	url = https://github.com/br4ch1st0chr0n3/eo-parser
 [submodule "phi-utils"]
 	path = phi-utils
 	url = https://github.com/br4ch1st0chr0n3/phi-utils
+[submodule "eo-utils"]
+	path = eo-utils
+	url = https://github.com/br4ch1st0chr0n3/eo-utils
