--- a/try-phi-language-utils.cabal
+++ b/try-phi-language-utils.cabal
@@ -4,13 +4,13 @@ cabal-version: 1.24
 --
 -- see: https://github.com/sol/hpack
 
-name:           try-phi
+name:           try-phi-language-utils
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/fizruk/try-phi#readme>
-homepage:       https://github.com/fizruk/try-phi#readme
-bug-reports:    https://github.com/fizruk/try-phi/issues
-author:         Nikolai Kudasov
-maintainer:     nickolay.kudasov@gmail.com
+homepage:       https://github.com/br4ch1st0chr0n3/try-phi-language-utils#readme
+bug-reports:    https://github.com/br4ch1st0chr0n3/try-phi-language-utils/issues
+author:         Nikolai Kudasov, Danila Danko
+maintainer:     nickolay.kudasov@gmail.com, br4ch1st0chr0n3@gmail.com
 copyright:      2021 Nikolai Kudasov
 license:        BSD3
 build-type:     Custom
@@ -19,7 +19,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/fizruk/try-phi
+  location: https://github.com/br4ch1st0chr0n3/try-phi-language-utils
 
 custom-setup
   setup-depends:
@@ -44,92 +44,50 @@ library
       Phi.Minimal.Pretty
       Phi.Minimal.Translation.Lambda
       Phi.Utils.GraphBuilder
-      Site.Content
-      Site.Scripts
   other-modules:
-      Paths_try_phi
+      Paths_try_phi_language_utils
   hs-source-dirs:
       src
   ghc-options: -Wall -fno-warn-type-defaults -O2
   build-depends:
-      ansi-terminal
-    , base >=4.7 && <5
-    , bifunctors
-    , bound
-    , bytestring
+      base >=4.7 && <5
     , containers
-    , deepseq
     , directory
-    , eo-parser
+    , eo-utils
     , fgl
-    , free
     , graphviz
-    , hashable
     , insert-ordered-containers
-    , kan-extensions
-    , logict
-    , miso
     , mtl
     , parsers
+    , phi-utils
     , prettyprinter
-    , prettyprinter-ansi-terminal
-    , profunctors
-    , ref-tf
     , text
-    , transformers
     , trifecta
     , unordered-containers
-    , xmonad-contrib
   default-language: Haskell2010
 
-executable try-phi
+executable try-phi-language-utils
   main-is: Main.hs
   other-modules:
-      Paths_try_phi
+      Paths_try_phi_language_utils
   hs-source-dirs:
       app
   ghc-options: -Wall -fno-warn-type-defaults -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      ansi-terminal
-    , base >=4.7 && <5
-    , bifunctors
-    , bound
-    , bytestring
+      base >=4.7 && <5
     , containers
-    , deepseq
     , directory
-    , eo-parser
+    , eo-utils
     , fgl
-    , free
     , graphviz
-    , hashable
     , insert-ordered-containers
-    , kan-extensions
-    , logict
-    , miso
     , mtl
     , parsers
+    , phi-utils
     , prettyprinter
-    , prettyprinter-ansi-terminal
-    , profunctors
-    , ref-tf
     , text
-    , transformers
     , trifecta
     , unordered-containers
-    , xmonad-contrib
-  if impl(ghcjs)
-    build-depends:
-        jsaddle
-      , miso >=1.8
-      , try-phi
-  else
-    build-depends:
-        jsaddle
-      , jsaddle-warp
-      , miso >=1.8
-      , try-phi
-      , warp
   default-language: Haskell2010
 
 test-suite doctests
@@ -141,36 +99,22 @@ test-suite doctests
   build-depends:
       Glob
     , QuickCheck
-    , ansi-terminal
     , base
-    , bifunctors
-    , bound
-    , bytestring
     , containers
-    , deepseq
     , directory
     , doctest
-    , eo-parser
+    , eo-utils
     , fgl
-    , free
     , graphviz
-    , hashable
     , insert-ordered-containers
-    , kan-extensions
-    , logict
-    , miso
     , mtl
     , parsers
+    , phi-utils
     , prettyprinter
-    , prettyprinter-ansi-terminal
-    , profunctors
-    , ref-tf
     , template-haskell
     , text
-    , transformers
     , trifecta
     , unordered-containers
-    , xmonad-contrib
   default-language: Haskell2010
 
 test-suite spec
@@ -180,40 +124,26 @@ test-suite spec
       Phi.Minimal.Machine.CallByNameSpec
       Phi.Minimal.Model.Arbitrary
       Phi.Minimal.Translation.LambdaSpec
-      Paths_try_phi
+      Paths_try_phi_language_utils
   hs-source-dirs:
       test
   ghc-options: -Wall -fno-warn-type-defaults -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       QuickCheck
-    , ansi-terminal
     , base >=4.7 && <5
-    , bifunctors
-    , bound
-    , bytestring
     , containers
-    , deepseq
     , directory
-    , eo-parser
+    , eo-utils
     , fgl
-    , free
     , graphviz
-    , hashable
     , hspec
     , insert-ordered-containers
-    , kan-extensions
-    , logict
-    , miso
     , mtl
     , parsers
+    , phi-utils
     , prettyprinter
-    , prettyprinter-ansi-terminal
-    , profunctors
-    , ref-tf
     , text
-    , transformers
     , trifecta
-    , try-phi
+    , try-phi-language-utils
     , unordered-containers
-    , xmonad-contrib
   default-language: Haskell2010
