--- a/stack.yaml
+++ b/stack.yaml
@@ -38,21 +38,14 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
-#
-extra-deps:
-- miso-1.8.2.0
-- trifecta-2.1.2
-- jsaddle-0.9.8.2
-- jsaddle-warp-0.9.8.2
-- servant-lucid-0.9.0.5
-- ref-tf-0.4.0.2
+
 
 ghc-options:
   '$everything': -haddock
 
-flags:
-  miso:
-    jsaddle: true
+# flags:
+#   miso:
+#     jsaddle: true
 
 #
 # extra-deps: []
